fix welcome-button margins and align product boxes properly

--- a/public/css/application.css
+++ b/public/css/application.css
@@ -23,3 +23,20 @@ body {
 	max-height: 13em;
 	overflow: auto;
 }
+
+.welcome-button {
+	margin: 0px 5px 5px 0px;
+}
+
+h4 {
+	margin-bottom: 5px;
+}
+
+.main-area-row {
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.col-xs-6 {
+	width: 49%;
+}
